--- a/Restaurant-System/Restaurant-System/Restaurant-System.csproj
+++ b/Restaurant-System/Restaurant-System/Restaurant-System.csproj
@@ -56,6 +56,7 @@
     <Compile Include="OutsideTable.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RestaurantController.cs" />
     <Compile Include="Salad.cs" />
     <Compile Include="Table.cs" />
     <Compile Include="TableTypes.cs" />
